--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
-    "@ts-tool/ts-codegen-cli": "^1.0.5"
+    "@ts-tool/ts-codegen-cli": "^2.0.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   },
   "scripts": {
+    "start": "ts-node src/index.ts",
     "codegen": "ts-codegen"
   },
   "repository": {
