--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
-    "@ts-tool/ts-codegen-cli": "^2.1.2",
+    "@ts-tool/ts-codegen-cli": "^3.0.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "ts-node src/index.ts",
-    "codegen": "ts-codegen"
+    "codegen": "rm -rf clients && ts-codegen"
   },
   "repository": {
     "type": "git",
