--- a/ts-codegen.config.json
+++ b/ts-codegen.config.json
@@ -3,8 +3,20 @@
   "requestCreateLib": "../utils/createRequest",
   "requestCreateMethod": "createRequest",
   "apiSpecsPaths": [
-    "https://petstore.swagger.io/v2/swagger.json",
-    "./data/swagger.json",
-    "./data/openapi.json"
-  ]
+    {
+      "path": "https://petstore.swagger.io/v2/swagger.json",
+      "name": "RemoteSwaggerService"
+    },
+    {
+      "path": "./data/swagger.json",
+      "name": "LocalSwaggerService"
+    },
+    {
+      "path": "./data/openapi.json",
+      "name": "LocalOpenAPIService"
+    }
+  ],
+  "options": {
+    "withComments": true
+  }
 }
