update codegen config

--- a/ts-codegen.config.json
+++ b/ts-codegen.config.json
@@ -17,6 +17,8 @@
     }
   ],
   "options": {
-    "withComments": true
+    withComments: true,
+    typeWithPrefix: false,
+    backwardCompatible: false
   }
 }
